# esp32c3-rs-qq

./: .gitignore  Cargo.toml  README.md  build.rs  esp32c3.json  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
async_libs/async-channel/: Cargo.toml
async_libs/async-channel/src/: lib.rs
async_libs/async-executor/: Cargo.toml
async_libs/async-executor/src/: lib.rs
async_libs/async-io/: Cargo.toml
async_libs/async-io/src/: driver.rs  lib.rs  reactor.rs
async_libs/async-task/: Cargo.toml
async_libs/async-task/src/: header.rs  raw.rs  runnable.rs  utils.rs
async_libs/concurrent-queue/: Cargo.toml
async_libs/concurrent-queue/src/: lib.rs  single.rs  unbounded.rs
async_libs/no_atomic/: Cargo.toml
async_libs/no_atomic/src/: atomic_bool.rs  atomic_usize.rs  lazy.rs  lib.rs
async_libs/parking/: Cargo.toml
async_libs/parking/src/: lib.rs
async_libs/polling/polling-master/src/: lib.rs  poll.rs  wepoll.rs
async_libs/polling/src/: epoll.rs  kqueue.rs  lib.rs  poll.rs  wepoll.rs
async_libs/smol/: Cargo.toml
async_libs/smol/src/: lib.rs  spawn.rs
bot_libs/get_time/: Cargo.toml  README.md
bot_libs/get_time/src/: main.rs
bot_libs/nrq-engine/: Cargo.toml  build.rs
bot_libs/nrq-engine/src/: common.rs  error.rs  hex.rs  lib.rs  provider.rs  simulate_std.rs  structs.rs  wtlogin.rs
bot_libs/nrq-engine/src/binary/: binary_reader.rs
bot_libs/nrq-engine/src/command/: common.rs
bot_libs/nrq-engine/src/command/config_push_svc/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/friendlist/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/group_anonymous_generate_nick/: decoder.rs
bot_libs/nrq-engine/src/command/group_member_card/: decoder.rs
bot_libs/nrq-engine/src/command/img_store/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/message_svc/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/oidb_svc/: builder.rs  decoder.rs  mod.rs  music.rs
bot_libs/nrq-engine/src/command/online_push/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/pb_message_svc/: builder.rs
bot_libs/nrq-engine/src/command/profile_service/: builder.rs  decoder.rs  mod.rs
bot_libs/nrq-engine/src/command/reg_prxy_svc/: builder.rs  decoder.rs
bot_libs/nrq-engine/src/command/signature/: builder.rs
bot_libs/nrq-engine/src/command/stat_svc/: builder.rs  decoder.rs
bot_libs/nrq-engine/src/command/summary_card/: builder.rs
bot_libs/nrq-engine/src/command/visitor_svc/: builder.rs
bot_libs/nrq-engine/src/command/wtlogin/: builder.rs  decoder.rs  mod.rs  tlv_reader.rs  tlv_writer.rs
bot_libs/nrq-engine/src/crypto/: encrypt.rs  mod.rs  qqtea.rs
bot_libs/nrq-engine/src/highway/: mod.rs
bot_libs/nrq-engine/src/jce/: mod.rs
bot_libs/nrq-engine/src/msg/: fragment.rs  mod.rs
bot_libs/nrq-engine/src/msg/elem/: anonymous.rs  at.rs  face.rs  friend_image.rs  group_image.rs  light_app.rs  market_face.rs  mod.rs  red_bag.rs  reply.rs  text.rs
bot_libs/nrq-engine/src/pb/: mod.rs  msg.rs  oidb.rs
bot_libs/nrq-engine/src/pb/msg/: msg.proto
bot_libs/nrq-engine/src/protocol/: device.rs  oicq.rs  packet.rs  sig.rs  transport.rs  version.rs
bot_libs/nrs-qq/: Cargo.toml
bot_libs/nrs-qq/src/: lib.rs  provider.rs  structs.rs
bot_libs/nrs-qq/src/client/: api.rs  client.rs  event.rs  mod.rs  net.rs
bot_libs/nrs-qq/src/client/ext/: decoder.rs  encoder.rs  framed.rs  framed_impl.rs  fuse.rs  length_delimited.rs  mod.rs  read_buf.rs
bot_libs/nrs-qq/src/client/handler/: mod.rs
bot_libs/nrs-qq/src/client/processor/: config_push_svc.rs  message_svc.rs  mod.rs  online_push.rs  reg_proxy_svc.rs  wtlogin.rs
bot_libs/nrs-qq/src/client/processor/c2c/: friend_system_msg.rs  group_system_msg.rs  new_member.rs  private_msg.rs  temp_session.rs
bot_libs/nrs-qq/src/ext/: common.rs  login.rs  reconnect.rs
src/: main.rs
src/config/: mod.rs  structs.rs
src/handler/: mod.rs
src/provider/: channel.rs  engine.rs  mod.rs  mutex.rs  oneshot.rs  raw.rs  rwlock.rs  task.rs  tcp.rs
