[package]
name = "rust-esp32-std-demo"
version = "0.23.0"
authors = ["ivmarkov"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/ivmarkov/rust-esp32-std-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"
[workspace]
members = [
    "async_libs/*"
]
[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
prost = { git = "https://github.com/a1967629423/prost.git" }
prost-types = { git = "https://github.com/a1967629423/prost.git" }
jcers = {git = "https://github.com/a1967629423/jcers.git"}
jcers_proc = {git = "https://github.com/a1967629423/jcers.git"}

#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
opt-level = "z"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental","native"]

# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]

# Enable this feature if you are building for QEMU
qemu = []

# Enable this feature in case you have a Kaluga board and would like to see a LED screen demo
kaluga = []

# Enable this feature in case you have a TTGO board and would like to see a LED screen demo
ttgo = []

# Enable this feature in case you have an ESP32S3-USB-OTG board and would like to see a LED screen demo
heltec = []

# Enable this feature in case you have a generic SSD1306 Display connected via SPI to pins 3, 4, 5, 16, 18, 23 (SPI3) of your board
ssd1306g_spi = []

# Enable this feature in case you have a generic SSD1306 screen connected to pins 14, 22 and 21 of your board
ssd1306g = []

esp32s3_usb_otg = []

# Enable this feature in case you have an RMII IP101 Ethernet adapter
ip101 = []

# Enable this feature in case you have an SPI W5500 Ethernet adapter
w5500 = []

# Enable this feature in case you have a Waveshare board and 4.2" e-paper
waveshare_epd = []

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
esp-idf-svc = "0.37.2"
esp-idf-hal = "0.33.1"
embedded-svc = "0.17.2"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
epd-waveshare = "0.5.0"
smol = {path="async_libs/smol"}
#smol = "1.2"
nrs-qq = {git="https://github.com/a1967629423/nrs-qq"}
futures = "0.3"
no-std-net = "0.6.0"
rand = {version = "0.8", default-features = false}
parking = {path="async_libs/parking"}
broadcaster = {version="1.0.0",default-features = false}
once_cell = "1.4.1"
serde={version="1",default-features = false,features=["derive","alloc"]}
bytes = "1"
[build-dependencies]
embuild = "0.28"
anyhow = "1"
serde = "1"
uneval="0.2.4"
serde_json = "1"
nrq-engine = {git="https://github.com/a1967629423/nrs-qq"}
rand = "0.8"
# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }
