[package]
name = "nrs-qq"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = {version = "1", default-features = false }
serde = {version = "1",default-features = false, features =["derive"]}
md5 = {version = "0.7",default-features = false}
# flate2
miniz_oxide = {version = "0.5.1"}
prost = {version = "~0.9",default-features = false, features=["prost-derive"]}
futures = {version = "0.3",default-features = false, features = ["async-await","alloc"]}
#tracing
lazy_static = "1"
async-std = {version="1",default-features = false,features = ["alloc","async-io"]}
futures-channel = {version="0.3",default-features = false,features = ["alloc","sink"]}
#cached
uluru = "3"
rand = {version = "0.8", default-features = false}
derivative = {version = "2",features = ["use_core"]} #macro
jcers = {version = "0.1", git = "https://gitee.com/ttm0/jcers",default-features = false, features = ["derive"] }
no-std-net = "0.6.0"
genio = {version = "0.2.1",default-features = false}
tracing = {version = "0.1.31",default-features = false,features = ["attributes"]}
nrq-engine = { path = "../nrq-engine" }
pin-project-lite = "0.2.8"
async-trait = {version = "0.1.52"}
log = "0.4"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
[features]
default = []
std = []